added large view port responsivesness

--- a/src/Quillo_frontend/src/styles/constants/_mixins.scss
+++ b/src/Quillo_frontend/src/styles/constants/_mixins.scss
@@ -77,3 +77,24 @@
   justify-content: $justify;
   gap: $gap;
 }
+
+/*animation*/
+@mixin usesimpleanimation($duration, $delay) {
+  animation: simpleanimation;
+  animation-duration: $duration;
+  animation-delay: $delay;
+  animation-direction: alternate;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in;
+
+  @keyframes simpleanimation {
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    from {
+      transform: translateY(0.5rem);
+      opacity: 0;
+    }
+  }
+}
