--- a/src/Quillo_frontend/src/styles/pages/about.scss
+++ b/src/Quillo_frontend/src/styles/pages/about.scss
@@ -2,12 +2,20 @@
 @import "../constants/colors";
 
 #aboutreorg {
+  @include big-desktop {
+    padding: 2.5rem;
+  }
+
   width: 100vw;
   min-height: 100vh;
   padding: 0.5rem;
   padding-top: 2rem;
 
   .c01 {
+    @include big-desktop {
+      width: 55vw;
+    }
+
     .reorg {
       @include usefontLS();
       font-size: 2.75rem;
@@ -100,6 +108,18 @@
     }
 
     .controls {
+      @include desktop {
+        @include flexmixin(row-reverse, no-wrap, center, space-between, 0);
+      }
+
+      @include big-desktop {
+        width: 55vw;
+        bottom: 2.5rem;
+        left: 2.5rem;
+        background-color: $primary;
+        padding: 0.25rem 0;
+      }
+
       @include flexmixin(column, no-wrap, center, center, 0);
       width: 100vw;
       position: fixed;
@@ -108,6 +128,10 @@
 
       span,
       .getstarted {
+        @include desktop {
+          min-width: fit-content;
+        }
+
         width: 100%;
       }
 
@@ -124,6 +148,15 @@
       }
 
       span {
+        @include desktop {
+          width: 40%;
+        }
+
+        @include big-desktop {
+          max-width: 30vw;
+          padding: unset;
+        }
+
         @include flexmixin(row, no-wrap, center, space-between, 0);
         padding: 0.5rem;
         border: 0;
@@ -147,11 +180,94 @@
       }
 
       .getstarted {
+        @include desktop {
+          width: 20vw;
+          border: 1px solid $primary;
+          border-radius: 0.25rem;
+          transition: all ease-in-out 0.25s;
+
+          &:hover {
+            border: 1px solid $divider;
+            background-color: $secondary;
+          }
+        }
+
         padding: 0.5rem;
         background-color: $primary;
         border-top: 2px solid $secondary;
         font-size: 1.25rem;
         font-weight: 500;
+      }
+    }
+  }
+
+  .c02 {
+    @include big-desktop {
+      display: block !important;
+    }
+
+    display: none !important;
+    position: fixed;
+    top: 1rem;
+    right: 2.5rem;
+    width: calc(100vw - 66vw);
+    height: calc(100vh - 2rem);
+    padding: 0.5rem;
+    border: 1px solid $divider;
+    border-radius: 0.5rem;
+    background-color: $secondary;
+
+    .howitworks {
+      @include flexmixin(column, no-wrap, center, space-between, 0);
+      width: 100%;
+      height: 100%;
+
+      .workscontent {
+        .workstitle {
+          font-size: 1.25rem;
+          font-weight: 500;
+          text-align: center;
+          color: $text_primary;
+        }
+
+        span {
+          @include flexmixin(column, no-wrap, center, center, 1rem);
+          @include usesimpleanimation(300ms, 50ms);
+          margin-top: 1rem;
+
+          .title {
+            font-weight: 500;
+          }
+
+          p {
+            font-size: 1.125rem;
+            text-align: center;
+          }
+        }
+
+        .span {
+          padding-bottom: 0.5rem;
+          border-bottom: 1px solid $divider;
+        }
+      }
+
+      .contact {
+        width: 100%;
+
+        .social {
+          @include flexmixin(row, no-wrap, center, center, 1.5rem);
+          margin-bottom: 1rem;
+        }
+        .links {
+          @include flexmixin(row, no-wrap, center, center, 1.5rem);
+          padding-top: 0.5rem;
+          border: 0;
+          border-top: 1px solid $divider;
+
+          span {
+            cursor: pointer;
+          }
+        }
       }
     }
   }
