Improve the design by using themed colors

--- a/src/Quillo_frontend/src/styles/constants/_colors.scss
+++ b/src/Quillo_frontend/src/styles/constants/_colors.scss
@@ -1,6 +1,7 @@
-$primary: rgba(36, 36, 36, 1);
+$primary: #000e1c;
 $secondary: rgba(50, 50, 50, 0.4);
 $secondary_base: rgba(50, 50, 50, 1);
 $text_primary: rgba(238, 238, 238, 1);
 $text_secondary: rgba(197, 197, 197, 1);
 $divider: rgba(252, 234, 234, 0.03);
+$green: #00f2b6;
