--- a/src/Quillo_frontend/src/styles/constants/_colors.scss
+++ b/src/Quillo_frontend/src/styles/constants/_colors.scss
@@ -4,3 +4,4 @@ $secondary_base: rgba(50, 50, 50, 1);
 $text_primary: rgba(238, 238, 238, 1);
 $text_secondary: rgba(197, 197, 197, 1);
 $divider: rgba(252, 234, 234, 0.03);
+$success: rgba(80, 200, 120, 1);
