--- a/src/Quillo_frontend/src/styles/constants/_colors.scss
+++ b/src/Quillo_frontend/src/styles/constants/_colors.scss
@@ -1,8 +1,7 @@
-$primary: #000e1c;
-$secondary: rgba(50, 50, 50, 0.4);
-$secondary_base: rgba(50, 50, 50, 1);
-$text_primary: rgba(238, 238, 238, 1);
-$text_secondary: rgba(197, 197, 197, 1);
-$divider: rgba(252, 234, 234, 0.03);
+$primary: rgba(254, 252, 243, 1);
+$secondary: rgba(245, 235, 224, 0.2);
+$text_primary: rgba(50, 50, 50, 1);
+$text_secondary: rgba(22, 26, 48, 1);
+$placeholder_txt: rgba(38, 38, 38, 0.4);
+$divider: rgba(0, 0, 0, 0.1);
 $success: rgba(80, 200, 120, 1);
-$green: #00f2b6;
