--- a/src/Quillo_frontend/src/styles/pages/errorpage.scss
+++ b/src/Quillo_frontend/src/styles/pages/errorpage.scss
@@ -16,21 +16,15 @@
     @include usefontJO();
     margin-top: 1.125rem;
     padding: 0.375rem 5rem;
-    border: 1px solid $divider;
+    border: 0;
     border-radius: 0.25rem;
-    background-color: $secondary;
+    background-color: $success;
     outline: none;
     outline-color: transparent;
     font-size: 1rem;
     font-weight: 500;
-    color: $text_secondary;
+    color: $primary;
     transition: all ease-in-out 0.25s;
     cursor: pointer;
-
-    &:hover {
-      background-color: $divider;
-      //   border-color: $secondary;
-      //   text-decoration: underline;
-    }
   }
 }
