--- a/src/Quillo_frontend/src/styles/pages/about.scss
+++ b/src/Quillo_frontend/src/styles/pages/about.scss
@@ -2,274 +2,250 @@
 @import "../constants/colors";
 
 #aboutreorg {
-  @include big-desktop {
-    padding: 2.5rem;
-  }
-
-  width: 100vw;
-  min-height: 100vh;
-  padding: 0.5rem;
-  padding-top: 2rem;
-
-  .c01 {
-    @include big-desktop {
-      width: 55vw;
+  .about_features {
+    @include desktop {
+      @include flexmixin(row, no-wrap, flex-start, space-between, 0);
     }
 
-    .reorg {
-      @include usefontLS();
-      font-size: 2.75rem;
-      font-weight: 600;
-      color: $success;
-    }
-
-    .reorgintro {
-      margin-top: 2rem;
-      margin-bottom: 7rem;
-
-      .forstartups {
-        .textLG {
-          @include usefontLS();
-          text-transform: capitalize;
-          font-size: 2rem;
-          font-weight: 400;
-        }
-
-        .desc {
-          margin-top: 1rem;
-          font-size: 1.125rem;
-        }
+    .about {
+      @include desktop {
+        width: 20%;
       }
 
-      .forinvestors {
-        margin-top: 1rem;
-
-        .textMD,
-        .desc {
-          font-size: 1.125rem;
-        }
-
-        .textMD {
-          font-weight: 500;
-          text-transform: capitalize;
-        }
-
-        .desc {
-          margin-top: 0.5rem;
-        }
-      }
-    }
-
-    #whydaos,
-    #fraqs {
-      margin-top: 2rem;
-      margin-bottom: 7rem;
-
-      .textLG {
-        @include usefontJO();
-        font-size: 2rem;
+      .p0 {
+        font-size: 1.75rem;
         font-weight: 400;
       }
 
-      .textBG {
-        margin-top: 1rem;
-        padding: 0.5rem;
-        background-color: $secondary;
+      .p1 {
+        @include usefontLS();
+        font-size: 1.25rem;
+        color: $bluee;
+
+        span {
+          font-size: 1rem;
+          color: $danger;
+        }
+      }
+    }
+
+    .features {
+      @include tablet-upwards {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: space-between;
+      }
+
+      @include desktop {
+        width: calc(100% - 24%);
+      }
+
+      @include flexmixin(column, no-wrap, center, center, 0.5rem);
+      margin-top: 1rem;
+
+      #_feat_base {
+        @include tablet-upwards {
+          width: 32.5%;
+          font-size: 1.125rem;
+        }
+
+        @include flexmixin(row, no-wrap, center, center, 0.5rem);
+        width: 100%;
+        height: 5rem;
+        border-radius: 0.25rem;
+        font-size: 1rem;
+        font-weight: 500;
+        cursor: pointer;
+        transition: all ease-in-out 0.25s;
+
+        &:hover {
+          border-radius: 0;
+        }
+      }
+
+      ._feat {
+        color: $primary;
+        background-color: $success;
+      }
+
+      ._feat_incomplete {
         border: 1px solid $divider;
         border-radius: 0.25rem;
-      }
-
-      .textMD {
-        font-size: 1.25rem;
-        margin-top: 1rem;
-      }
-
-      .textXM {
-        font-size: 1.25rem;
-        font-weight: 400;
-        margin-top: 1rem;
-      }
-
-      span {
-        display: block;
-        margin-top: 1.5rem;
-        padding-bottom: 0.5rem;
-        border: 0;
-        border-bottom: 1px solid $divider;
-
-        .title {
-          @include usefontJO();
-          margin-bottom: 0.25rem;
-          font-size: 1.5rem;
-          color: $text_primary;
-        }
-        .desc {
-          font-size: 1.25rem;
-        }
-      }
-    }
-
-    #controls {
-      @include desktop {
-        @include flexmixin(row-reverse, no-wrap, center, space-between, 0);
-      }
-
-      @include big-desktop {
-        width: 55vw;
-        bottom: 2.5rem;
-        left: 2.5rem;
-        padding: 0.25rem 0;
-      }
-
-      @include flexmixin(column, no-wrap, center, center, 0);
-      width: 100vw;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-
-      span,
-      .getstarted {
-        @include desktop {
-          min-width: fit-content;
-        }
-
-        width: 100%;
-      }
-
-      button {
-        @include usefontJO();
-        height: 3rem;
-        border: 0;
-        outline: none;
-        outline-color: transparent;
-        background-color: transparent;
-        font-size: 1.125rem;
-        cursor: pointer;
-      }
-
-      span {
-        @include desktop {
-          width: 40%;
-          background-color: transparent;
-        }
-
-        @include big-desktop {
-          max-width: 30vw;
-          padding: unset;
-        }
-
-        @include flexmixin(row, no-wrap, center, space-between, 0);
-        padding: 0.5rem;
-        border: 0;
+        color: $text_primary;
         background-color: $primary;
-
-        .prevbtn,
-        .nextbtn {
-          @include flexmixin(row, no-wrap, center, center, 0);
-          width: 3rem;
-          border: 1px solid $divider;
-          border-radius: 0.25rem;
-          background-color: $primary;
-        }
-
-        .nextbtn {
-          @include usefontJost();
-          width: calc(100% - 4rem);
-          gap: 0.5rem;
-          font-weight: 500;
-          color: $text_primary;
-        }
-      }
-
-      .getstarted {
-        @include desktop {
-          width: 20vw;
-          border: 0;
-          border-radius: 0.25rem;
-          transition: all ease-in-out 0.25s;
-          color: $primary;
-          background-color: $success;
-        }
-
-        padding: 0.5rem;
-        background-color: $primary;
-        border-top: 2px solid $divider;
-        font-size: 1.25rem;
-        font-weight: 500;
       }
     }
   }
 
-  .c02 {
-    @include big-desktop {
-      display: block !important;
+  .for_founders_investors {
+    @include desktop {
+      @include flexmixin(row, no-wrap, flex-start, space-between, 0);
+      padding: 1.25rem;
     }
 
-    display: none !important;
-    position: fixed;
-    top: 2.5rem;
-    right: 2.5rem;
-    width: calc(100vw - 66vw);
-    height: calc(100vh - 5rem);
-    padding: 0.5rem;
-    border: 1px solid $divider;
+    @include big-desktop {
+      padding: 2rem;
+    }
+
+    margin-top: 1.75rem;
+    padding: 1rem 0.5rem;
     border-radius: 0.5rem;
     background-color: $secondary;
 
-    #howitworks {
-      @include flexmixin(column, no-wrap, center, space-between, 0);
-      width: 100%;
-      height: 100%;
+    .for_founders,
+    .for_investors {
+      @include desktop {
+        width: 48%;
+      }
 
-      .workscontent {
-        .workstitle {
-          font-size: 1.25rem;
-          font-weight: 500;
-          text-align: center;
-          color: $text_primary;
+      @include big-desktop {
+        width: 28%;
+      }
+
+      .p0 {
+        @include flexmixin(row, no-wrap, center, flex-start, 0.5rem);
+        font-size: 1.25rem;
+        font-weight: 500;
+      }
+
+      .p1 {
+        @include desktop {
+          text-align: justify;
+          font-weight: 400;
         }
 
-        span {
-          @include flexmixin(column, no-wrap, center, center, 1rem);
-          @include usesimpleanimation(300ms, 50ms);
-          margin-top: 1rem;
+        margin-top: 0.25rem;
+        font-size: 1.125rem;
+        font-weight: 300;
+        color: $text_primary;
+      }
+    }
 
-          .title {
-            font-weight: 500;
-          }
+    .for_founders {
+      .p0 {
+        color: $bluee;
+      }
+    }
+
+    .for_investors {
+      @include desktop {
+        margin-top: unset;
+      }
+
+      margin-top: 1rem;
+
+      .p0 {
+        color: $danger;
+      }
+    }
+
+    .growth {
+      @include big-desktop {
+        @include flexmixin(row, no-wrap, center, center, 0);
+      }
+
+      display: none !important;
+      width: 38%;
+      border: 0;
+      border-left: 1px solid $divider;
+
+      img {
+        width: 48%;
+      }
+    }
+  }
+
+  .how_it_works {
+    margin-top: 1.75rem;
+
+    .p0 {
+      @include usefontJO();
+      text-transform: capitalize;
+      font-size: 1.5rem;
+      font-weight: 400;
+      color: $danger;
+    }
+
+    ._steps {
+      @include tablet-upwards {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: space-between;
+      }
+
+      @include flexmixin(column, no-wrap, center, center, 0.5rem);
+      margin-top: 0.5rem;
+
+      img {
+        width: 3rem;
+        height: 3rem;
+      }
+
+      ._stepp {
+        @include tablet-upwards {
+          width: 49%;
+          min-height: 13.75rem;
+        }
+
+        @include desktop {
+          width: 32.5%;
+          min-height: 12.75rem;
+        }
+
+        padding: 0.5rem;
+        border-radius: 0.375rem;
+        background-color: $bluee;
+
+        .step_count {
+          @include usefontJO();
+          font-size: 1.125rem;
+          color: $primary;
+        }
+
+        .title_img {
+          @include flexmixin(row, no-wrap, flex-end, space-between, 0);
+          margin-bottom: 0.5rem;
+          padding-bottom: 0.5rem;
+          border: 0;
+          border-bottom: 1px solid $primary;
 
           p {
+            @include usefontJO();
             font-size: 1.125rem;
-            text-align: center;
+            color: $primary;
           }
         }
 
-        .span {
-          padding-bottom: 0.5rem;
-          border-bottom: 1px solid $divider;
+        .step_desc {
+          color: $primary;
         }
       }
+    }
+  }
 
-      .contact {
-        width: 100%;
+  .copy_contact {
+    margin-top: 1.75rem;
 
-        .social {
-          @include flexmixin(row, no-wrap, center, center, 1.5rem);
-          margin-bottom: 1rem;
-        }
-        .links {
-          @include flexmixin(row, no-wrap, center, center, 1.5rem);
-          padding-top: 0.5rem;
-          border: 0;
-          border-top: 1px solid $divider;
+    .copy {
+      @include flexmixin(row, no-wrap, center, flex-start, 0.5rem);
+      @include usefontLS();
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: $bluee;
+    }
 
-          span {
-            font-weight: 400;
-            color: $text_primary;
-            cursor: pointer;
-          }
-        }
-      }
+    .reserved {
+      margin-top: 0.5rem;
+      font-size: 1.025rem;
+      font-weight: 400;
+      color: $text_secondary;
+    }
+
+    .contact {
+      @include flexmixin(row, no-wrap, center, flex-start, 0.75rem);
+      margin-top: 0.75rem;
     }
   }
 }
