--- a/src/Quillo_frontend/src/styles/pages/about.scss
+++ b/src/Quillo_frontend/src/styles/pages/about.scss
@@ -3,6 +3,10 @@
 
 #aboutreorg {
   .about_features {
+    @include tablet-upwards {
+      margin-top: 4.75rem;
+    }
+
     @include desktop {
       @include flexmixin(row, no-wrap, flex-start, space-between, 0);
     }
@@ -31,6 +35,7 @@
 
     .features {
       @include tablet-upwards {
+        margin-top: unset;
         flex-direction: row;
         flex-wrap: wrap;
         align-items: flex-start;
@@ -82,6 +87,8 @@
     @include desktop {
       @include flexmixin(row, no-wrap, flex-start, space-between, 0);
       padding: 1.25rem;
+      padding-top: 4rem;
+      padding-bottom: 4rem;
     }
 
     @include big-desktop {
