--- a/src/Quillo_frontend/src/styles/pages/errorpage.scss
+++ b/src/Quillo_frontend/src/styles/pages/errorpage.scss
@@ -18,7 +18,7 @@
     padding: 0.375rem 5rem;
     border: 0;
     border-radius: 0.25rem;
-    background-color: $success;
+    background-color: $bluee;
     outline: none;
     outline-color: transparent;
     font-size: 1rem;
