--- a/src/Quillo_frontend/src/styles/constants/_colors.scss
+++ b/src/Quillo_frontend/src/styles/constants/_colors.scss
@@ -7,3 +7,14 @@ $divider: rgba(127, 127, 127, 0.25);
 $success: rgba(18, 163, 58, 0.7);
 $bluee: #006ad4;
 $danger: rgba(188, 0, 68, 0.7);
+$primary-gradientOne: linear-gradient(
+  0deg,
+  rgba(0, 60, 50, 0.9) 0%,
+  rgba(0, 120, 100, 0.8) 100%
+);
+$primary-gradientTwo: linear-gradient(
+  360deg,
+  rgba(0, 30, 25, 0.9) 0%,
+  rgba(20, 50, 40, 0.8) 100%
+);
+$primary-gradientThree: linear-gradient(180deg, #004d40 0%, #00251a 100%);
