--- a/src/Quillo_frontend/src/styles/pages/register.scss
+++ b/src/Quillo_frontend/src/styles/pages/register.scss
@@ -4,7 +4,7 @@
 .container {
   width: 100%;
   padding: 2rem;
-  margin-top: 8%;
+  margin-top: 2%;
   display: flex;
   flex-direction: column;
   background-color: #ffffff; /* Adjust background color as needed */
@@ -13,6 +13,13 @@
 
   /* Additional styling for borders */
   border: 1px solid rgba(0, 0, 0, 0.1); /* Soft border for separation */
+}
+
+@media (max-width: 768px) {
+  .for_founders,
+  .container {
+    margin-top: 5%;
+  }
 }
 
 .container h4 {
@@ -115,4 +122,13 @@
 }
 .fee {
   font-weight: bolder;
+}
+.view-tokens {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+
+  top: 10px;
+  position: relative;
 }
