--- a/src/Quillo_frontend/src/styles/pages/about.scss
+++ b/src/Quillo_frontend/src/styles/pages/about.scss
@@ -13,6 +13,9 @@ $success-dark: rgba(0, 230, 118, 0.8);
 $divider-dark: rgba(255, 255, 255, 0.25);
 
 #aboutreorg {
+  width: 1200px;
+  margin: 0;
+
   .about_features {
     @include tablet-upwards {
       margin-top: 8.75rem;
@@ -398,6 +401,7 @@ $divider-dark: rgba(255, 255, 255, 0.25);
   }
 
   .footer {
+ 
     background: linear-gradient(
       145deg,
       #004d40,
@@ -408,10 +412,15 @@ $divider-dark: rgba(255, 255, 255, 0.25);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .footer-content {
     max-width: 1200px;
+    margin-left: 0;
+    margin-right: 0;
     width: 100%;
     display: flex;
     flex-direction: row;
