--- a/src/Quillo_frontend/src/styles/pages/about.scss
+++ b/src/Quillo_frontend/src/styles/pages/about.scss
@@ -13,7 +13,7 @@ $success-dark: rgba(0, 230, 118, 0.8);
 $divider-dark: rgba(255, 255, 255, 0.25);
 
 #aboutreorg {
-  width: 1200px;
+  
   margin: 0;
 
   .about_features {
@@ -412,7 +412,7 @@ $divider-dark: rgba(255, 255, 255, 0.25);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 100%;
+    // width: 100%;
     margin-left: 0;
     margin-right: 0;
   }
@@ -421,7 +421,6 @@ $divider-dark: rgba(255, 255, 255, 0.25);
     max-width: 1200px;
     margin-left: 0;
     margin-right: 0;
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
