--- a/src/Quillo_frontend/src/styles/pages/about.scss
+++ b/src/Quillo_frontend/src/styles/pages/about.scss
@@ -412,13 +412,14 @@ $divider-dark: rgba(255, 255, 255, 0.25);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    // width: 100%;
+    width: 100%;
     margin-left: 0;
     margin-right: 0;
   }
 
   .footer-content {
     max-width: 1200px;
+    width: 100%;
     margin-left: 0;
     margin-right: 0;
     display: flex;
