--- a/src/Quillo_frontend/src/styles/constants/_colors.scss
+++ b/src/Quillo_frontend/src/styles/constants/_colors.scss
@@ -18,3 +18,4 @@ $primary-gradientTwo: linear-gradient(
   rgba(20, 50, 40, 0.8) 100%
 );
 $primary-gradientThree: linear-gradient(180deg, #004d40 0%, #00251a 100%);
+$dark:#141414
