--- a/src/Quillo_frontend/src/styles/components/Accordion.scss
+++ b/src/Quillo_frontend/src/styles/components/Accordion.scss
@@ -3,9 +3,9 @@
     border: 1.5px solid #00382C;
     border-radius: 1rem;
     overflow: hidden;
-    background-color: #fff;
+    background-color: transparent;
     transition: all 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Box shadow */
+    box-shadow: 0 4px 6px rgba(221, 182, 182, 0.1); /* Box shadow */
   
   
     & + & {
@@ -17,13 +17,13 @@
     
         h1 {
           font-size: 2rem;
-          color: #333;
+          color: #ffffff;
           text-transform: uppercase;
           letter-spacing: 1.5px;
           margin: 0;
           padding: 10px;
           background: linear-gradient(90deg, #006ad4 0%, #004d40 100%);
-          color: white;
+          color: #ffffff;
           border-radius: 8px;
         }
       }
@@ -34,12 +34,14 @@
       align-items: center;
       padding: 15px;
       cursor: pointer;
-      background-color: #fff;
+      background:transparent;
       color: #00382C;
   
       h2 {
         margin: 0;
         font-size: 1.25rem;
+        // color: #60A5FA;
+        color:#F7B140;
       }
   
       .arrow {
@@ -55,7 +57,7 @@
       max-height: 0;
       overflow: hidden;
       transition: max-height 0.3s ease, padding 0.3s ease;
-  
+    color:#ffffff;
       &.open {
         max-height: 500px; /* Adjust based on your content */
         padding: 15px;
