--- a/src/Quillo_frontend/src/styles/components/FAQ.scss
+++ b/src/Quillo_frontend/src/styles/components/FAQ.scss
@@ -3,15 +3,15 @@
     .accordion-title {
    
     margin-bottom: 15px;
-
+    
     h1 {
       font-size: 1.5rem;
- 
+   color: #ffff;
       text-transform: uppercase;
       letter-spacing: 1.5px;
    
   
-      color:#00382C;
+     
       border-radius: 8px;
     }
     @media (max-width: 768px) {
