--- a/src/Quillo_frontend/src/styles/pages/about.scss
+++ b/src/Quillo_frontend/src/styles/pages/about.scss
@@ -103,7 +103,7 @@ $divider-dark: rgba(255, 255, 255, 0.25);
     @include desktop {
       @include flexmixin(row, no-wrap, flex-start, space-between, 0);
       padding: 1.25rem;
-      padding-top: 4rem;
+      // padding-top: 4rem;
       padding-bottom: 4rem;
     }
 
@@ -111,7 +111,7 @@ $divider-dark: rgba(255, 255, 255, 0.25);
       padding: 2rem;
     }
 
-    margin-top: 3.75rem;
+    // margin-top: 3.75rem;
     padding: 1rem 0.5rem;
     border-radius: 0.5rem;
 
