--- a/src/Quillo_frontend/src/styles/components/navigation.scss
+++ b/src/Quillo_frontend/src/styles/components/navigation.scss
@@ -16,7 +16,10 @@
   border: 0;
   border-bottom: 1px solid $divider;
   // background-color: transparent;
- 
+  z-index: 1000;
+  background: linear-gradient(-45deg, #2c3e50, #4a0e29, #16222a,#e73c7e,);
+    background-size: 400% 400%;
+    animation: gradientBG 15s ease infinite;
   .logo {
     @include usefontLS();
     font-size: 1.75rem;
