--- a/src/Quillo_frontend/src/styles/components/navigation.scss
+++ b/src/Quillo_frontend/src/styles/components/navigation.scss
@@ -17,9 +17,10 @@
   border-bottom: 1px solid $divider;
   // background-color: transparent;
   z-index: 1000;
-  background: linear-gradient(-45deg, #2c3e50, #4a0e29, #16222a,#e73c7e,);
-    background-size: 400% 400%;
-    animation: gradientBG 15s ease infinite;
+  // background: linear-gradient(-45deg, #2c3e50, #4a0e29, #16222a, #e73c7e);
+  background-color: #2c3e50;
+  background-size: 400% 400%;
+  animation: gradientBG 15s ease infinite;
   .logo {
     @include usefontLS();
     font-size: 1.75rem;
@@ -35,7 +36,6 @@
     outline: none;
     outline-color: transparent;
     // background-color: transparent;
-  
   }
 }
 @keyframes gradientBG {
@@ -49,8 +49,6 @@
     background-position: 0% 50%;
   }
 }
-
-
 
 @keyframes animate {
   0% {
@@ -78,9 +76,10 @@
   border-bottom: 1px solid $divider;
   // background-color:transparent;
   z-index: 1000;
-  background: linear-gradient(-45deg, #2c3e50, #4a0e29, #16222a,#e73c7e,);
-    background-size: 400% 400%;
-    animation: gradientBG 15s ease infinite;
+  // background: linear-gradient(-45deg, #2c3e50, #4a0e29, #16222a,#e73c7e,);
+  background-color: #2c3e50;
+  background-size: 400% 400%;
+  animation: gradientBG 15s ease infinite;
   .logo_links {
     @include flexmixin(row, no-wrap, center, flex-start, 1rem);
 
