--- a/src/Quillo_frontend/src/styles/index.scss
+++ b/src/Quillo_frontend/src/styles/index.scss
@@ -9,12 +9,10 @@
   padding: 0;
   -ms-overflow-style: none;
   scrollbar-width: 0;
-  
 }
 
 html {
   scroll-behavior: smooth;
-  
 }
 
 // body {
@@ -28,16 +26,18 @@ html {
 // height: 100vh;
 // width: 100vw;
 // }
-.foo {color: #ee7752,  #23a6d5, #23d5ab }
+.foo {
+  color: #ee7752, #23a6d5, #23d5ab;
+}
 body {
   margin: 0;
   padding: 0;
   height: 100vh;
 
-
-overflow-y: auto;
-scrollbar-width: thin; /* Firefox: set scrollbar to thin */
-  background: linear-gradient(-45deg, #2c3e50, #4a0e29, #16222a,#e73c7e,);
+  overflow-y: auto;
+  scrollbar-width: thin; /* Firefox: set scrollbar to thin */
+  // background: linear-gradient(-45deg, #2c3e50, #4a0e29, #16222a,#e73c7e,);
+  background-color: #2c3e50;
   background-size: 400% 400%;
   animation: gradientBG 15s ease infinite;
 }
@@ -74,8 +74,6 @@ body::-webkit-scrollbar-thumb:hover {
     background-position: 0% 50%;
   }
 }
-
-
 
 @keyframes animate {
   0% {
