--- a/src/Quillo_frontend/src/styles/index.scss
+++ b/src/Quillo_frontend/src/styles/index.scss
@@ -37,7 +37,7 @@ body {
   overflow-y: auto;
   scrollbar-width: thin; /* Firefox: set scrollbar to thin */
   // background: linear-gradient(-45deg, #2c3e50, #4a0e29, #16222a,#e73c7e,);
-  background-color: #2c3e50;
+  background-color: #01200f;
   background-size: 400% 400%;
   animation: gradientBG 15s ease infinite;
 }
