--- a/src/Quillo_frontend/src/styles/pages/layout.scss
+++ b/src/Quillo_frontend/src/styles/pages/layout.scss
@@ -5,7 +5,10 @@
     padding: 0 2.5rem;
   }
 
-  margin-top: 4.25rem;
+  & {
+    margin-top: 4.25rem;
+  }
+
   margin-bottom: 0.5rem;
   padding: 0 0.5rem;
 }
